--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="index.css" rel="stylesheet">
+    <link href="src/index.css" rel="stylesheet">
     <title>Lab3</title>
 </head>
 <body>
@@ -10,10 +10,10 @@
         <h2 class="motto">OpenGL API</h2>
         <menu>
             <li><a href="index.html">OpenGL</a></li>
-            <li><a href="industry_support.html">Industry support</a></li>
-            <li><a href="openGL_design.html">OpenGL design</a></li>
-            <li><a href="vulkan.html">Vulkan</a></li>
-            <li><a href="email/index.html">Email layout</a></li>
+            <li><a href="src/industry_support.html">Industry support</a></li>
+            <li><a href="src/openGL_design.html">OpenGL design</a></li>
+            <li><a href="src/vulkan.html">Vulkan</a></li>
+            <li><a href="src/email/index.html">Email layout</a></li>
         </menu>
     </header>
     <nav class="textContainer sideContainer centerColumnAlignedContent leftAlignedContent" id="links">
@@ -39,7 +39,7 @@
                 been managed by the non-profit technology consortium Khronos Group.</p>
         </div>
         <div class="centerColumnAlignedContent leftAlignedContent">
-            <img class="articleImage" src="../images/openGL_khronos.png" alt="OpenGL Khronos">
+            <img class="articleImage" src="images/openGL_khronos.png" alt="OpenGL Khronos">
         </div>
     </article>
     <div class="textContainer sideContainer centerColumnAlignedContent leftAlignedContent" id="sideBar">
