--- a/src/industry_support.html
+++ b/src/industry_support.html
@@ -9,7 +9,7 @@
 <header class="textContainer mottoContainer" id="header">
     <h2 class="motto">OpenGL API</h2>
     <menu>
-        <li><a href="../index.html">OpenGL</a></li>
+        <li><a href="index.html">OpenGL</a></li>
         <li><a href="industry_support.html">Industry support</a></li>
         <li><a href="openGL_design.html">OpenGL design</a></li>
         <li><a href="vulkan.html">Vulkan</a></li>
