--- a/src/email/index.html
+++ b/src/email/index.html
@@ -166,10 +166,11 @@
 
         <td class="topRow">
             <menu class="menu">
-                <li><a href="https://murmeowhash.github.io/Lab2/index.html">Initial layout</a></li>
-                <li><a href="https://murmeowhash.github.io/Lab2/flex.html">Flex layout</a></li>
-                <li><a href="https://murmeowhash.github.io/Lab2/grid.html">Grid layout</a></li>
-                <li><a href="https://murmeowhash.github.io/Lab2/plane.html">Plane layout</a></li>
+                <li><a href="https://murmeowhash.github.io/Lab3/src/index.html">OpenGL</a></li>
+                <li><a href="https://murmeowhash.github.io/Lab3/src/industry_support.html">Industry support</a></li>
+                <li><a href="https://murmeowhash.github.io/Lab3/src/openGL_design.html">OpenGL design</a></li>
+                <li><a href="https://murmeowhash.github.io/Lab3/src/vulkan.html">Vulkan</a></li>
+                <li><a href="https://murmeowhash.github.io/Lab3/src/email/index.html">Email layout</a></li>
             </menu>
         </td>
         <td class="topRow secondPseudoColumn"></td>
